--- a/accueil.css
+++ b/accueil.css
@@ -3,11 +3,11 @@
 
 @font-face {
   font-family: "policeP";
-  src: url(Roboto/Roboto-Thin.ttf);
+  src: url(Roboto/Roboto-Regular.ttf);
 }
 @font-face {
   font-family: "policeH";
-  src: url(Roboto/Roboto-Regular.ttf);
+  src: url(Roboto/Roboto-Bold.ttf);
   /* font-size: 1.5em; */
 }
 body {
@@ -20,7 +20,8 @@ a {
 }
 p {
   font-family: policeP, Arial, Helvetica, sans-serif;
-  font-size: 25px;
+  font-size: 27px;
+  color:gray;
 }
 
 /* headerAcceuil */
@@ -30,6 +31,12 @@ p {
   align-items: center;
   width: 100%;
 }
+.header1__logo{
+  width:100%;
+  margin:15px;
+  display: flex;
+  justify-content: center;
+}
 .header1__logo__img {
   object-fit: cover;
 }
@@ -37,6 +44,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width:100%;
 }
 .header1__gris__form {
   /* background-color: #eaeaea; */
@@ -66,30 +74,35 @@ p {
 .header1__gris__form__label .entreeVille {
   border: 0;
   background-color: #eaeaea;
+  font-size: 20px;
+  font-family: policeH, Arial, Helvetica, sans-serif;
 }
-.header1__gris__txtBtn {
+.header1__gris__txt {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   background-color: #f6f6f6;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
+  width:100%;
 }
-.header1__gris__txtBtn__h1 {
+.header1__gris__txt__h1 {
   width: 60%;
   text-align: center;
 }
-.header1__gris__txtBtn__p {
+.header1__gris__txt__p {
   width: 80%;
   text-align: center;
+  margin-top: 0;
 }
-.header1__gris__txtBtn__btnOpacity {
+.header1__gris__BtnOpacity {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #f6f6f6;
 }
-.header1__gris__txtBtn__btnP {
+.header1__gris__BtnOpacity__btnP {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,7 +112,9 @@ p {
   border: 0;
   border-radius: 30px;
   width: 55%;
+  min-width: 242px;policeH, Arial, Helvetica, sans-serif;
   height: 60px;
+  margin:30px 0px 60px 0px;
 }
 
 /* .header1__gris__txtBtn__btnS {
@@ -111,11 +126,20 @@ p {
     width: 55%;
     height: 60px;
   } */
-.header1__gris__txtBtn__btnP a {
+.header1__gris__BtnOpacity__btnP a {
   list-style-type: none;
   text-decoration: none;
   color: white;
   font-size: 20px;
 }
+
+@media screen and (min-width: 767px)
+{
+  .header1__gris__BtnOpacity__btnP{
+    max-width: 300px;
+    
+  }
+ 
+}  
 
 
