--- a/accueil.css
+++ b/accueil.css
@@ -108,6 +108,9 @@ p {
   align-items: center;
   /* background-color: #9356dc; */
   background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
+  transition: background-color 250ms;
+  box-shadow: 0px 6px 10px 3px #d3d3d3;
+  transition:box-shadow 250ms;
   color: white;
   border: 0;
   border-radius: 30px;
@@ -115,6 +118,12 @@ p {
   min-width: 242px;policeH, Arial, Helvetica, sans-serif;
   height: 60px;
   margin:30px 0px 60px 0px;
+  
+}
+.header1__gris__BtnOpacity__btnP:hover{
+  box-shadow: 0px 6px 10px 3px #979696;
+  filter:brightness(110%);
+  
 }
 
 /* .header1__gris__txtBtn__btnS {
