--- a/accueil.css
+++ b/accueil.css
@@ -1,141 +1,201 @@
 /* base */
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+@font-face {
+  font-family: "policeH";
+  src: url(Font/Roboto/Roboto-Medium.ttf);
+}
 
 @font-face {
   font-family: "policeP";
-  src: url(Roboto/Roboto-Regular.ttf);
+  src: url(Font/Roboto/Roboto-Thin.ttf);
 }
+
 @font-face {
-  font-family: "policeH";
-  src: url(Roboto/Roboto-Medium.ttf);
+  font-family: "policeH3";
+  src: url(Font/Shrikhand/Shrikhand-Regular.ttf);
   /* font-size: 1.5em; */
 }
+
 body {
-  font-family: policeP, Arial, Helvetica, sans-serif;
+  font-family: "policeP", Arial, Helvetica, sans-serif;
+  color: #000000;
+  max-width: 1700px;
+  margin: auto;
+}
+
+h1 {
+  padding-left: 20px;
+  width: 100%;
+}
+
+h3 {
+  font-family: "policeH3", Arial, Helvetica, sans-serif;
 }
 
 h1,
-a {
-  font-family: policeH, Arial, Helvetica, sans-serif;
+h2 {
+  font-family: "policeH", Arial, Helvetica, sans-serif;
 }
-p {
-  font-family: policeP, Arial, Helvetica, sans-serif;
-  font-size: 27px;
-  color: gray;
+
+a {
+  text-decoration: none;
+  color: #000000;
 }
 
 /* headerAcceuil */
 .header1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
 }
+
 .header1__logo {
   width: 100%;
   margin: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-.header1__logo__img {
-  object-fit: cover;
+
+.header1__img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
+
 .header1__gris {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
 }
+
 .header1__gris__form {
-  /* background-color: #eaeaea; */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #cdcdcd), color-stop(9%, #eaeaea));
   background: linear-gradient(to bottom, #cdcdcd 1%, #eaeaea 9%);
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .header1__gris__form__icone {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-
-  /* opacity: 1; */
-
-  /* z-index: 2; */
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 60px;
   width: 60px;
 }
+
 .header1__gris__form__icone i {
   display: block;
   margin: 0;
   padding: 0;
   font-size: 1.5em;
 }
+
 .header1__gris__form__label .entreeVille {
   border: 0;
   background-color: #eaeaea;
   font-size: 20px;
   font-family: policeH, Arial, Helvetica, sans-serif;
 }
+
 .header1__gris__txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background-color: #f6f6f6;
   /* padding-bottom: 20px; */
   width: 100%;
 }
+
 .header1__gris__txt__h1 {
   width: 60%;
   text-align: center;
 }
+
 .header1__gris__txt__p {
   width: 80%;
   text-align: center;
   margin-top: 0;
+  font-size: 24px;
+  font-weight: bold;
+  color: #424141;
+  font-family: "policeP", Arial, Helvetica, sans-serif;
 }
+
 .header1__gris__BtnOpacity {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #f6f6f6;
 }
-.header1__gris__BtnOpacity__btnP {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-  background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
-
-  box-shadow: 0px 6px 10px 3px #d3d3d3;
-  opacity: 1;
-  transition: opacity 250ms;
-  color: white;
-  border: 0; 
-  border-radius: 30px;
-  width: 55%;
-  min-width: 242px;
-  height: 60px;
-  margin: 30px 0px 60px 0px;
-  position: absolute;
-
-  list-style-type: none;
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
+.header1__gris__BtnOpacity a {
+  font-family: "policeH", Arial, Helvetica, sans-serif;
 }
 
-.header1__gris__BtnOpacity__btnS {
-  opacity: 0;
-  z-index: 1;
-  transition: opacity 250ms;
+.header1__gris__BtnOpacity__btnP {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
-  box-shadow: 0px 6px 10px 3px #9b9a9a;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
+  -webkit-box-shadow: 0px 6px 10px 3px #d3d3d3;
+          box-shadow: 0px 6px 10px 3px #d3d3d3;
+  opacity: 1;
+  -webkit-transition: opacity 250ms;
+  transition: opacity 250ms;
   color: white;
   border: 0;
   border-radius: 30px;
@@ -143,88 +203,10 @@ p {
   min-width: 242px;
   height: 60px;
   margin: 30px 0px 60px 0px;
+  position: absolute;
   list-style-type: none;
   text-decoration: none;
   color: white;
-  font-size: 20px;
-}
-/* .header1__gris__BtnOpacity__btnP:hover{
-    opacity:0;
-
-  } */
-.header1__gris__BtnOpacity__btnS:hover {
-  opacity: 1;
-}
-
-/* section Fonctionnement */
-
-.fonctionnement{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-left: 20px; 
-}
-.fonctionnement__titre{
-  /* padding-left: 20px; */
-}
-.fonctionnement__list{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.fonctionnement__list__bloc__icones{
-  display:flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 20px;
-  width:80%;
-  max-width: 450px;
-  height:100px;
-  margin-left: -30px;
-  border-style: none; 
-  
-  position:absolute; 
-  z-index: 1;
-  
-}
-
-.fonctionnement__list__bloc__icones:hover{
-  color:#9356dc;
-}
-.fonctionnement__list__bloc__icones p{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  width: 30px;
-  height:30px;
-  background-color: #9356dc;
-  color:white;
-  font-size: 15px;
-  align-items: center;
-  margin:0;
-  position:sticky;
-
- margin-right: 15px; 
-  z-index: 1;
-}
-
-.fonctionnement__list__bloc{
-  display:flex;
-  justify-content: center;
-  align-items: center;
- 
-  width:80%;
-  max-width: 450px;
-  height:100px;
-  margin: 30px;
-  background-color: #f6f6f6;
-  
-  border-radius: 25px;
-  box-shadow: 0px 6px 10px 3px #d3d3d3;
-}
-.fonctionnement__list__bloc__lien{
   font-size: 20px;
 }
 
@@ -232,5 +214,409 @@ p {
   .header1__gris__BtnOpacity__btnP {
     max-width: 300px;
   }
-
 }
+
+.header1__gris__BtnOpacity__btnS {
+  opacity: 0;
+  z-index: 1;
+  -webkit-transition: opacity 250ms;
+  transition: opacity 250ms;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
+  -webkit-box-shadow: 0px 6px 10px 3px #9b9a9a;
+          box-shadow: 0px 6px 10px 3px #9b9a9a;
+  color: white;
+  border: 0;
+  border-radius: 30px;
+  width: 55%;
+  min-width: 242px;
+  height: 60px;
+  margin: 30px 0px 60px 0px;
+  list-style-type: none;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+}
+
+@media screen and (min-width: 767px) {
+  .header1__gris__BtnOpacity__btnS {
+    max-width: 300px;
+  }
+}
+
+.header1__gris__BtnOpacity__btnS:hover {
+  opacity: 1;
+}
+
+/* section Fonctionnement */
+.fonctionnement {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.fonctionnement a {
+  font-family: "policeH", Arial, Helvetica, sans-serif;
+}
+
+.fonctionnement__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.fonctionnement__list__bloc__icones {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 20px;
+  width: 80%;
+  max-width: 450px;
+  height: 100px;
+  margin-left: -30px;
+  border-style: none;
+  position: absolute;
+  z-index: 1;
+}
+
+.fonctionnement__list__bloc__icones p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background-color: #9356dc;
+  color: white;
+  font-size: 15px;
+  align-items: center;
+  margin: 0;
+  position: -webkit-sticky;
+  position: sticky;
+  margin-right: 15px;
+  z-index: 1;
+}
+
+@media screen and (min-width: 767px) {
+  .fonctionnement__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .fonctionnement__list__bloc__icones {
+    width: auto;
+    position: relative;
+  }
+}
+
+.fonctionnement__list__bloc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 80%;
+  max-width: 450px;
+  height: 100px;
+  margin: 30px;
+  background-color: #f6f6f6;
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 6px 10px 3px #d3d3d3;
+          box-shadow: 0px 6px 10px 3px #d3d3d3;
+}
+
+@media screen and (min-width: 767px) {
+  .fonctionnement__list__bloc {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.fonctionnement__list__bloc__lien {
+  font-size: 20px;
+  width: 80%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 22%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (min-width: 767px) {
+  .fonctionnement__list__bloc__lien {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0px;
+    text-align: center;
+    padding-bottom: 10px;
+  }
+}
+
+.fonctionnement__list__bloc__icones:hover {
+  color: #9356dc;
+}
+
+/* section restaurant */
+.restaurant {
+  background-color: #f6f6f6;
+}
+
+.restaurant__titre {
+  padding-top: 30px;
+}
+
+.restaurant__gris {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 80px;
+}
+
+@media screen and (min-width: 767px) {
+  .restaurant__gris {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .restaurant__gris__carte {
+    width: 40%;
+  }
+}
+
+.restaurant__gris__carte {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #000000;
+  width: 85%;
+  height: 400px;
+  text-decoration: none;
+  border-radius: 25px;
+  margin: 10px;
+}
+
+.restaurant__gris__carte__img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  height: 70%;
+}
+
+.restaurant__gris__carte__img__new {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  margin-right: 15px;
+  width: 100px;
+  height: 40px;
+  background-color: #98e2cf;
+  color: #008664;
+  border-radius: 5px;
+  font-weight: 800;
+}
+
+.restaurant__gris__carte__img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px 25px 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.restaurant__gris__carte__bas {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 0 0 25px 25px;
+  height: 100px;
+  padding-right: 15px;
+  -webkit-box-shadow: 0px 6px 10px 3px #d3d3d3;
+          box-shadow: 0px 6px 10px 3px #d3d3d3;
+}
+
+.restaurant__gris__carte__bas__icone {
+  width: 33px;
+  padding-right: 3px;
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.restaurant__gris__carte__bas__txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 80%;
+  padding-left: 15px;
+}
+
+.restaurant__gris__carte__bas__txt h2 {
+  margin: 0;
+}
+
+.restaurant__gris__carte__bas__txt p {
+  margin: 0;
+  font-size: 22px;
+}
+
+.restaurant__gris__carte__bas__icone .fa-regular {
+  position: absolute;
+  font-size: 30px;
+}
+
+.restaurant__gris__carte__bas__icone .fa-solid {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#9356dc), to(#ff79da));
+  background-image: linear-gradient(#9356dc, #ff79da);
+  background-clip: text;
+  color: transparent;
+  -webkit-transition: font-size 100ms;
+  transition: font-size 100ms;
+  font-size: 0px;
+}
+
+.restaurant__gris__carte__bas__icone:hover .fa-solid {
+  font-size: 31px;
+  z-index: 1;
+}
+
+footer {
+  background-color: #363535;
+  color: white;
+}
+
+.footer__logoBlanc {
+  font-family: "policeH3", Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  margin: 0;
+  padding: 20px;
+  font-weight: normal;
+}
+
+.footer__menu {
+  list-style-type: none;
+  margin: 0px;
+  padding: 20px;
+}
+
+.footer__menu__lien {
+  font-family: "policeH", Arial, Helvetica, sans-serif;
+}
+
+.footer__menu__lien a {
+  padding-left: 10px;
+}
+
+.fa-solid fa-handshake-angle {
+  font-size: 12px;
+  color: red;
+}
+
+.footer__menu li {
+  padding-bottom: 5px;
+}
+/*# sourceMappingURL=accueil.css.map */
