--- a/accueil.scss
+++ b/accueil.scss
@@ -1,4 +1,6 @@
 /* base */
+@import "footer.scss";
+@import "bouton.scss";
 
 @font-face {
   font-family: "policeH";
@@ -32,7 +34,35 @@ h2 {
 }
 a {
   text-decoration: none;
-  color:#000000;
+  color: #000000;
+}
+
+// loading spinner
+.loadingSpinner {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background:#ff79da;
+  opacity: 0;
+  position: fixed;
+  z-index: -1;
+
+  animation: 2s loader;
+}
+.logoAnime {
+}
+@keyframes logoAnime {
+}
+@keyframes loader {
+  0% {
+    opacity: 1;
+    z-index: 5;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
 }
 
 /* headerAcceuil */
@@ -111,70 +141,70 @@ a {
   }
 }
 
-.header1__gris__BtnOpacity {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f6f6f6;
-  & a {
-    font-family: "policeH", Arial, Helvetica, sans-serif;
-  }
-}
+// .header1__gris__BtnOpacity {
+//   width: 100%;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background-color: #f6f6f6;
+//   & a {
+//     font-family: "policeH", Arial, Helvetica, sans-serif;
+//   }
+// }
 
-.header1__gris__BtnOpacity__btnP {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
-  box-shadow: 0px 6px 10px 3px #d3d3d3;
-  opacity: 1;
-  transition: opacity 250ms;
-  color: white;
-  border: 0;
-  border-radius: 30px;
-  width: 55%;
-  min-width: 242px;
-  height: 60px;
-  margin: 30px 0px 60px 0px;
-  position: absolute;
-  list-style-type: none;
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
-  @media screen and (min-width: 767px) {
-    max-width: 300px;
-  }
-}
+// .header1__gris__BtnOpacity__btnP {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
+//   box-shadow: 0px 6px 10px 3px #d3d3d3;
+//   opacity: 1;
+//   transition: opacity 250ms;
+//   color: white;
+//   border: 0;
+//   border-radius: 30px;
+//   width: 55%;
+//   min-width: 242px;
+//   height: 60px;
+//   margin: 30px 0px 60px 0px;
+//   position: absolute;
+//   list-style-type: none;
+//   text-decoration: none;
+//   color: white;
+//   font-size: 20px;
+//   @media screen and (min-width: 767px) {
+//     max-width: 300px;
+//   }
+// }
 
-.header1__gris__BtnOpacity__btnS {
-  opacity: 0;
-  z-index: 1;
-  transition: opacity 250ms;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
-  box-shadow: 0px 6px 10px 3px #9b9a9a;
-  color: white;
-  border: 0;
-  border-radius: 30px;
-  width: 55%;
-  min-width: 242px;
-  height: 60px;
-  margin: 30px 0px 60px 0px;
-  list-style-type: none;
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
-  @media screen and (min-width: 767px) {
-    max-width: 300px;
-  }
-}
+// .header1__gris__BtnOpacity__btnS {
+//   opacity: 0;
+//   z-index: 1;
+//   transition: opacity 250ms;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
+//   box-shadow: 0px 6px 10px 3px #9b9a9a;
+//   color: white;
+//   border: 0;
+//   border-radius: 30px;
+//   width: 55%;
+//   min-width: 242px;
+//   height: 60px;
+//   margin: 30px 0px 60px 0px;
+//   list-style-type: none;
+//   text-decoration: none;
+//   color: white;
+//   font-size: 20px;
+//   @media screen and (min-width: 767px) {
+//     max-width: 300px;
+//   }
+// }
 
-.header1__gris__BtnOpacity__btnS:hover {
-  opacity: 1;
-}
+// .header1__gris__BtnOpacity__btnS:hover {
+//   opacity: 1;
+// }
 
 /* section Fonctionnement */
 
@@ -289,13 +319,10 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    &__carte {
-      width: 40%;
-    }
   }
 }
 
-.restaurant__gris__carte {
+.carte {
   display: flex;
   flex-direction: column;
   color: #000000;
@@ -304,6 +331,9 @@ a {
   text-decoration: none;
   border-radius: 25px;
   margin: 10px;
+  @media screen and (min-width: 767px) {
+    width: 40%;
+  }
   &__img {
     display: flex;
     justify-content: end;
@@ -339,85 +369,46 @@ a {
     height: 100px;
     padding-right: 15px;
     box-shadow: 0px 6px 10px 3px #d3d3d3;
-  }
-  &__bas__icone {
-    width: 33px;
-    padding-right: 3px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.restaurant__gris__carte__bas__txt {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  width: 80%;
-  // height: 70px;
-  padding-left: 15px;
-}
-.restaurant__gris__carte__bas__txt h2 {
-  margin: 0;
-}
-.restaurant__gris__carte__bas__txt p {
-  margin: 0;
-  font-size: 22px;
-}
-
-.restaurant__gris__carte__bas__icone .fa-regular {
-  position: absolute;
-  font-size: 30px;
-}
-.restaurant__gris__carte__bas__icone .fa-solid {
-  background-image: linear-gradient(#9356dc, #ff79da);
-  background-clip: text;
-  color: transparent;
-  transition: font-size 100ms;
-  font-size: 0px;
-}
-.restaurant__gris__carte__bas__icone:hover .fa-solid {
-  font-size: 31px;
-  z-index: 1;
-}
-
-.restaurant__gris__carte__bas__icone:hover .fa-regular {
-  // color:transparent;
-}
-
-// .restaurant__gris__carte__bas__icone i {
-//   font-size: 31px;
-// }
-
-footer {
-  background-color: rgb(54, 53, 53);
-  color: white;
-}
-.footer__logoBlanc {
-  font-family: "policeH3", Arial, Helvetica, sans-serif;
-  font-size: 25px;
-  margin: 0;
-  padding: 20px;
-  font-weight: normal;
-}
-.footer__menu {
-  list-style-type: none;
-  margin: 0px;
-  padding: 20px;
-  &__lien {
-    font-family: "policeH", Arial, Helvetica, sans-serif;
-    & a {
-      padding-left: 10px;
+    &__icone {
+      width: 33px;
+      padding-right: 3px;
+      height: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:hover .fa-solid {
+        font-size: 31px;
+        z-index: 1;
+      }
+      .fa-regular {
+        position: absolute;
+        font-size: 30px;
+      }
+      .fa-solid {
+        background-image: linear-gradient(#9356dc, #ff79da);
+        background-clip: text;
+        color: transparent;
+        transition: font-size 100ms;
+        font-size: 0px;
+      }
+    }
+    &__txt {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      width: 80%;
+      // height: 70px;
+      padding-left: 15px;
+      h2 {
+        margin: 0;
+      }
+      p {
+        margin: 0;
+        font-size: 22px;
+      }
     }
   }
-}
-.fa-solid fa-handshake-angle {
-  font-size: 12px;
-  color: red;
-}
-.footer__menu li {
-  padding-bottom: 5px;
 }
 
 // @media screen and (min-width: 767px) {
