--- a/accueil.scss
+++ b/accueil.scss
@@ -38,24 +38,68 @@ a {
 }
 
 // loading spinner
-.loadingSpinner {
+.loading {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  background:#ff79da;
+  background:white;
   opacity: 0;
   position: fixed;
   z-index: -1;
+  animation: 5s loader;
+  & img{
+margin:20px;
+width:20%;
 
-  animation: 2s loader;
+  }
 }
-.logoAnime {
+.arc{
+  display:flex;
+  background : radial-gradient(circle at top,red 34%,blue);  
+  animation: logoAnime 3s ease-in-out infinite;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  border:2px solid rgba(0,0,205,1)
+   
 }
+
+.arc:after{
+  content:"";
+  position:absolute;
+  top: -1px;
+  right:-1px;
+  bottom:-1px;
+  left:-1px;
+  border-radius:100px;
+  border-top: 10px solid red;
+  // border:2px solid transparent;
+  // border-top-color:red;
+ animation: logoAnime 2s ease-in-out infinite;
+
+}
+// .logoAnime {
+// }
 @keyframes logoAnime {
+  0%{
+    transform:rotate(0deg);
+  }
+  100%{
+    transform:rotate(360deg);
+  }
 }
 @keyframes loader {
   0% {
+    opacity: 1;
+    z-index: 5;
+  }
+  75% {
     opacity: 1;
     z-index: 5;
   }
