--- a/css/police.css
+++ b/css/police.css
@@ -9,4 +9,4 @@
 @font-face {
   font-family: "policeH3";
   src: url(../Font/Shrikhand/Shrikhand-Regular.ttf);
-}
+}/*# sourceMappingURL=police.css.map */
