--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -6,13 +6,8 @@
 @import "coeur.scss";
 @import "police.scss";
 
-
-
-
-
-
 body {
- font-family: "policeP", Arial, Helvetica, sans-serif;
+  font-family: "policeP", Arial, Helvetica, sans-serif;
   color: #000000;
   max-width: 1700px;
   margin: auto;
@@ -32,8 +27,6 @@ a {
   text-decoration: none;
   color: #000000;
 }
-
-
 
 /* headerAcceuil */
 .header1 {
@@ -111,16 +104,17 @@ a {
   }
 }
 
-
-
 /* section Fonctionnement */
 
 .fonctionnement {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  & a {
+  a {
     font-family: "policeH", Arial, Helvetica, sans-serif;
+  }
+  h1 {
+    width: auto;
   }
 }
 
@@ -213,6 +207,7 @@ a {
   background-color: #f6f6f6;
   &__titre {
     padding-top: 30px;
+    width: auto;
   }
 }
 .restaurant__gris {
