--- a/sass/loadingSpinner.scss
+++ b/sass/loadingSpinner.scss
@@ -1,76 +1,74 @@
 // loading spinner
-@import"variables.scss";
+@import "variables.scss";
 
 .loading {
-    display:flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background:white;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: white;
+  opacity: 0;
+  position: fixed;
+  z-index: -1;
+  animation: 4s loader;
+  & img {
+    margin: 20% 20px 20px 20px;
+    width: 20%;
+    // z-index: -1;
+    // opacity: 0;
+    // animation: 5s loader;
+  }
+}
+
+.arc {
+  display: flex;
+  background: radial-gradient(circle at top, $grad2 34%, $grad1);
+  animation: logoAnime 2s ease-in-out infinite;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  border: 2px solid rgba(147, 86, 220, 1);
+}
+
+.arc:after {
+  content: "";
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  left: -1px;
+  border-radius: 100px;
+  border-top: 10px solid $grad2;
+  // border:2px solid transparent;
+  // border-top-color:red;
+  animation: logoAnime 1s ease-in-out infinite;
+}
+// .logoAnime {
+// }
+@keyframes logoAnime {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes loader {
+  0% {
+    opacity: 1;
+    z-index: 5;
+  }
+  78% {
+    opacity: 1;
+    z-index: 5;
+  }
+  100% {
     opacity: 0;
-    position: fixed;
     z-index: -1;
-    animation: 4s loader;
-    & img{
-  margin:20% 20px 20px 20px;
-  width:20%;
-  // z-index: -1;
-  // opacity: 0;
-  // animation: 5s loader;
-  
-    }
   }
-  .arc{
-    display:flex;
-    background : radial-gradient(circle at top,$grad2 34%,$grad1);  
-    animation: logoAnime 2s ease-in-out infinite;
-    position: relative;
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-    border:2px solid rgba(147,86,220,1)
-     
-  }
-  
-  .arc:after{
-    content:"";
-    position:absolute;
-    top: -1px;
-    right:-1px;
-    bottom:-1px;
-    left:-1px;
-    border-radius:100px;
-    border-top: 10px solid $grad2;
-    // border:2px solid transparent;
-    // border-top-color:red;
-   animation: logoAnime 1s ease-in-out infinite;
-  
-  }
-  // .logoAnime {
-  // }
-  @keyframes logoAnime {
-    0%{
-      transform:rotate(0deg);
-    }
-    100%{
-      transform:rotate(360deg);
-    }
-  }
-  @keyframes loader {
-    0% {
-      opacity: 1;
-      z-index: 5;
-    }
-    78% {
-      opacity: 1;
-      z-index: 5;
-    }
-    100% {
-      opacity: 0;
-      z-index: -1;
-    }
-  }
+}
