mise en place des ancres (ne fonctionne pas sur firefox), changement du nom de la classe du bouton, taille de l'arc du loading spinner dans une variable, mise en place de mediaquery supplémentaire pour la marge entre icone et texte dans fonctionnement dans acceuil.scss, modification  du hover dans menu.scss permettant au chek vert de fonctionner correctement jusqu'à 300px de largeur d'écran

--- a/sass/bouton.scss
+++ b/sass/bouton.scss
@@ -1,5 +1,5 @@
 @import "variables.scss";
-.header1__gris__BtnOpacity {
+.BtnOpacity {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -10,7 +10,7 @@
   }
 }
 
-.header1__gris__BtnOpacity__btnP {
+.BtnOpacity__btnP {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +35,7 @@
   // }
 }
 
-.header1__gris__BtnOpacity__btnS {
+.BtnOpacity__btnS {
   opacity: 0;
   z-index: 1;
   transition: opacity 250ms;
@@ -60,6 +60,6 @@
   // }
 }
 
-.header1__gris__BtnOpacity__btnS:hover {
+.BtnOpacity__btnS:hover {
   opacity: 1;
 }
