--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -135,7 +135,7 @@ a {
     border-style: none;
     position: absolute;
     z-index: 1;
-
+   
     & p {
       display: flex;
       justify-content: center;
@@ -178,6 +178,7 @@ a {
 
   border-radius: 25px;
   box-shadow: 0px 6px 10px 3px #d3d3d3;
+  
   @media screen and (min-width: 767px) {
     flex-direction: column;
   }
@@ -195,8 +196,12 @@ a {
       margin: 0px;
       text-align: center;
       padding-bottom: 10px;
+      
     }
+    @media screen and (max-width:350px) {
+      margin-left: 25%;
   }
+}
 }
 .fonctionnement__list__bloc__icones:hover {
   color: $grad1;
@@ -292,39 +297,3 @@ a {
     }
   }
 }
-
-// @media screen and (min-width: 767px) {
-//   .header1__gris__BtnOpacity__btnP {
-//     max-width: 300px;
-//   }
-//   .header1__gris__BtnOpacity__btnS {
-//     max-width: 300px;
-//   }
-//   .fonctionnement__list {
-
-//     flex-direction: row;
-//     justify-content: space-around;
-//     align-items: center;
-//     &__bloc{
-//       flex-direction: column;
-//       &__icones{
-//         width:auto;
-//         position:relative;
-//       }
-//       &__lien{
-//         justify-content: center;
-//         margin:0;
-//         padding-bottom: 10px;
-//       }
-//     }
-//   }
-//   .restaurant__gris{
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     justify-content: space-around;
-
-//     &__carte{
-//       width:40%;
-//     }
-// }
-// }
