--- a/sass/loadingSpinner.scss
+++ b/sass/loadingSpinner.scss
@@ -1,6 +1,6 @@
 // loading spinner
 @import "variables.scss";
-
+$tailleArc:50px;
 .loading {
   display: flex;
   flex-direction: column;
@@ -14,7 +14,7 @@
   opacity: 0;
   position: fixed;
   z-index: -1;
-  animation: 4s loader;
+  animation: 3s loader;
   & img {
     margin: 20% 20px 20px 20px;
     width: 20%;
@@ -29,9 +29,9 @@
   background: radial-gradient(circle at top, $grad2 34%, $grad1);
   animation: logoAnime 2s ease-in-out infinite;
   position: relative;
-  width: 100px;
-  height: 100px;
-  border-radius: 100px;
+  width: $tailleArc;
+  height: $tailleArc;
+  border-radius: $tailleArc;
   border: 2px solid rgba(147, 86, 220, 1);
 }
 
@@ -42,7 +42,7 @@
   right: -1px;
   bottom: -1px;
   left: -1px;
-  border-radius: 100px;
+  border-radius: $tailleArc;
   border-top: 10px solid $grad2;
   // border:2px solid transparent;
   // border-top-color:red;
