--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -3,6 +3,9 @@
 @import "bouton.scss";
 @import "coeur.scss";
 @import "police.scss";
+@import "loadingSpinner.scss";
+
+
 
 /* font-size: 1.5em; */
 
@@ -68,7 +71,7 @@ a {
   z-index: 1;
   position: relative;
   border-radius: 50px;
-  margin-top: -100px;
+  margin-top: -180px;
 }
 .NomResto {
   padding: 20px 10px 10px 10px;
@@ -161,8 +164,12 @@ a {
       justify-content: space-between;
       align-items: center;
       width: 100%;
+      transition:width;
+      transition: all 1s;
       &__txt {
         width: 80%;
+        transition:width;
+        transition: all 1s;
         margin: 0 0 0 25px;
         & h3,
         p {
@@ -182,8 +189,14 @@ a {
         // z-index: 1;
       }
     }
+    &:hover &__vue {
+      width: calc(100% - 80px);
+    }
+    &:hover &__vue__txt {
+      width: 65%;
+    }
     &:hover &__caché {
-      width: 100px;
+      width: 80px;
       opacity: 1;
       i {
         transform: rotate(700deg);
