--- a/css/menu.css
+++ b/css/menu.css
@@ -6,12 +6,12 @@
 }
 .footer a {
   color: white;
-  font-size: 15px;
+  font-size: 17px;
   font-family: "policeH", Arial, Helvetica, sans-serif;
 }
 .footer__logoBlanc {
   font-family: "policeH3", Arial, Helvetica, sans-serif;
-  font-size: 25px;
+  font-size: 24px;
   margin: 0;
   padding: 20px 20px 0 20px;
   font-weight: normal;
@@ -36,18 +36,18 @@
   color: white;
 }
 
-.header1__gris__BtnOpacity {
+.BtnOpacity {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f6f6f6;
 }
-.header1__gris__BtnOpacity a {
+.BtnOpacity a {
   font-family: "policeH", Arial, Helvetica, sans-serif;
 }
 
-.header1__gris__BtnOpacity__btnP {
+.BtnOpacity__btnP {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,7 +70,7 @@
   max-width: 300px;
 }
 
-.header1__gris__BtnOpacity__btnS {
+.BtnOpacity__btnS {
   opacity: 0;
   z-index: 1;
   transition: opacity 250ms;
@@ -93,7 +93,7 @@
   max-width: 300px;
 }
 
-.header1__gris__BtnOpacity__btnS:hover {
+.BtnOpacity__btnS:hover {
   opacity: 1;
 }
 
@@ -109,7 +109,97 @@
   font-family: "policeH3";
   src: url(../Font/Shrikhand/Shrikhand-Regular.ttf);
 }
-/* font-size: 1.5em; */
+.loading {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: white;
+  opacity: 0;
+  position: fixed;
+  z-index: -1;
+  -webkit-animation: 3s loader;
+          animation: 3s loader;
+}
+.loading img {
+  margin: 20% 20px 20px 20px;
+  width: 20%;
+}
+
+.arc {
+  display: flex;
+  background: radial-gradient(circle at top, #ff79da 34%, #9356dc);
+  -webkit-animation: logoAnime 2s ease-in-out infinite;
+          animation: logoAnime 2s ease-in-out infinite;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  border: 2px solid rgb(147, 86, 220);
+}
+
+.arc:after {
+  content: "";
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  left: -1px;
+  border-radius: 50px;
+  border-top: 10px solid #ff79da;
+  -webkit-animation: logoAnime 1s ease-in-out infinite;
+          animation: logoAnime 1s ease-in-out infinite;
+}
+
+@-webkit-keyframes logoAnime {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes logoAnime {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes loader {
+  0% {
+    opacity: 1;
+    z-index: 5;
+  }
+  78% {
+    opacity: 1;
+    z-index: 5;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+@keyframes loader {
+  0% {
+    opacity: 1;
+    z-index: 5;
+  }
+  78% {
+    opacity: 1;
+    z-index: 5;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
 body {
   font-family: "policeP", Arial, Helvetica, sans-serif;
   color: #000000;
@@ -153,6 +243,7 @@ a {
 }
 .header1__logo a i {
   font-size: 20px;
+  color: #000000;
 }
 .header1__bkgnd {
   width: 100%;
@@ -170,7 +261,7 @@ a {
   z-index: 1;
   position: relative;
   border-radius: 50px;
-  margin-top: -100px;
+  margin-top: -200px;
 }
 
 .NomResto {
@@ -240,6 +331,7 @@ a {
   margin-bottom: 5px;
   margin-left: 5%;
   text-transform: uppercase;
+  font-size: 20px;
 }
 
 .h2__bord {
@@ -267,7 +359,7 @@ a {
   display: flex;
   align-items: center;
   width: 90%;
-  height: 100px;
+  height: 85px;
   background-color: #f6f6f6;
   border-radius: 25px;
   box-shadow: 0px 6px 10px 3px #d3d3d3;
@@ -278,7 +370,7 @@ a {
   justify-content: center;
   align-items: center;
   width: 0px;
-  height: 100px;
+  height: 85px;
   background-color: #98e2cf;
   border-radius: 0 25px 25px 0;
   transition: width;
@@ -294,9 +386,18 @@ a {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  height: 100%;
+  transition: width;
+  transition: all 1s;
 }
 .partie__choix__vue__txt {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 80%;
+  height: 100%;
+  transition: width;
+  transition: all 1s;
   margin: 0 0 0 25px;
 }
 .partie__choix__vue__txt h3,
@@ -305,6 +406,7 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  margin: 5px;
 }
 .partie__choix__vue__prix {
   display: flex;
@@ -314,12 +416,20 @@ a {
   align-items: center;
   justify-content: center;
 }
+.partie__choix__vue__prix p {
+  font-family: "policeH", Arial, Helvetica, sans-serif;
+}
+.partie__choix:hover .partie__choix__vue {
+  width: calc(100% - 80px);
+}
+.partie__choix:hover .partie__choix__vue__txt {
+  width: 65%;
+}
 .partie__choix:hover .partie__choix__caché {
-  width: 100px;
+  width: 80px;
   opacity: 1;
 }
 .partie__choix:hover .partie__choix__caché i {
-  transform: rotate(700deg);
   -webkit-animation-name: tourneCoche;
           animation-name: tourneCoche;
   -webkit-animation-duration: 1s;
