--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -12,15 +12,15 @@ body {
   max-width: 1700px;
   margin: auto;
 }
-h1 {
-  padding-left: 20px;
-  width: 100%;
+
 }
 h3 {
   font-family: "policeH3", Arial, Helvetica, sans-serif;
 }
-h1,
+
 h2 {
+  margin-left: 7%;
+  margin-top: 50px;
   font-family: "policeH", Arial, Helvetica, sans-serif;
 }
 a {
@@ -75,6 +75,7 @@ a {
 }
 
 .header1__gris__form__label .entreeVille {
+  width:200px;
   border: 0;
   background-color: #eaeaea;
   font-size: 20px;
@@ -113,9 +114,7 @@ a {
   a {
     font-family: "policeH", Arial, Helvetica, sans-serif;
   }
-  h1 {
-    width: auto;
-  }
+ 
 }
 
 .fonctionnement__list {
@@ -210,10 +209,10 @@ a {
 /* section restaurant */
 .restaurant {
   background-color: #f6f6f6;
-  &__titre {
-    padding-top: 30px;
-    width: auto;
-  }
+  // &__titre {
+  //   padding-top: 30px;
+  //   width: auto;
+  // }
 }
 .restaurant__gris {
   display: flex;
