MAJ couleur bordure H2 dans menu.scss et autres finitions

--- a/css/accueil.css
+++ b/css/accueil.css
@@ -206,17 +206,16 @@ body {
   margin: auto;
 }
 
-h1 {
-  padding-left: 20px;
-  width: 100%;
-}
-
 h3 {
-  font-family: "policeH3", Arial, Helvetica, sans-serif;
+  font-family: "policeH", Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin: 5px;
 }
 
 h2 {
   margin-left: 7%;
+  font-size: 30px;
+  padding-top: 50px;
   font-family: "policeH", Arial, Helvetica, sans-serif;
 }
 
@@ -310,14 +309,14 @@ a {
 .fonctionnement a {
   font-family: "policeH", Arial, Helvetica, sans-serif;
 }
-.fonctionnement h1 {
-  width: auto;
-}
 
 .fonctionnement__list {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.fonctionnement__list h2 {
+  margin-bottom: 0;
 }
 .fonctionnement__list__bloc__icones {
   display: flex;
@@ -365,8 +364,8 @@ a {
   align-items: center;
   width: 80%;
   max-width: 450px;
-  height: 100px;
-  margin: 30px;
+  height: 85px;
+  margin: 15px;
   background-color: #f6f6f6;
   border-radius: 25px;
   box-shadow: 0px 6px 10px 3px #d3d3d3;
@@ -406,10 +405,6 @@ a {
 /* section restaurant */
 .restaurant {
   background-color: #f6f6f6;
-}
-.restaurant__titre {
-  padding-top: 30px;
-  width: auto;
 }
 
 .restaurant__gris {
@@ -512,6 +507,6 @@ a {
   margin: 0;
 }
 .carte__bas__txt p {
-  margin: 0;
-  font-size: 22px;
+  margin: 5px;
+  font-size: 20px;
 }/*# sourceMappingURL=accueil.css.map */
