--- a/sass/_pages/_accueil.scss
+++ b/sass/_pages/_accueil.scss
@@ -1,6 +1,6 @@
 /* base */
 @import "_utils_variables.scss";
-@import "_utils_police.scss";
+@import "_base_police.scss";
 @import "_utils_coeur.scss";
 @import "_composants_bouton.scss";
 @import "_loadingSpinner.scss";
