ajout des liens de contact dans les fichiers html et suppression des mauvais imports dans bouton et loadingspinner.scss

--- a/sass/_composants/_bouton.scss
+++ b/sass/_composants/_bouton.scss
@@ -1,4 +1,4 @@
-@import "_utils_variables.scss";
+// @import "_utils_variables.scss";
 .BtnOpacity {
   width: 100%;
   display: flex;
@@ -14,10 +14,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   background: radial-gradient(ellipse at top left, $grad2, $grad1);
   box-shadow: 0px 6px 10px 3px #d3d3d3;
+
   opacity: 1;
-  transition: opacity 250ms;
+  // transition: opacity 250ms;
+
   color: white;
   border: 0;
   border-radius: 30px;
@@ -25,7 +28,9 @@
   min-width: 242px;
   height: 60px;
   margin: 45px 0px 70px 0px;
+
   position: absolute;
+
   list-style-type: none;
   text-decoration: none;
   color: white;
@@ -38,13 +43,17 @@
 .BtnOpacity__btnS {
   opacity: 0;
   z-index: 1;
+
   transition: opacity 250ms;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  background: radial-gradient(ellipse at top left, $grad2, $grad1);
+
+  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
   box-shadow: 0px 6px 10px 3px #9b9a9a;
   color: white;
+
   border: 0;
   border-radius: 30px;
   width: 55%;
@@ -53,7 +62,6 @@
   margin: 30px 0px 60px 0px;
   list-style-type: none;
   text-decoration: none;
-  color: white;
   font-size: 20px;
   // @media screen and (min-width: 767px) {
   max-width: 300px;
@@ -63,3 +71,6 @@
 .BtnOpacity__btnS:hover {
   opacity: 1;
 }
+// .BtnOpacity__btnP:hover {
+//   opacity: 0;
+// }
