--- a/css/menu.css
+++ b/css/menu.css
@@ -1,41 +1,17 @@
 @charset "UTF-8";
 /* base */
-.footer {
-  background-color: rgb(54, 53, 53);
-  color: white;
+@font-face {
+  font-family: "policeH";
+  src: url(../Font/Roboto/Roboto-Medium.ttf);
 }
-.footer a {
-  color: white;
-  font-size: 17px;
-  font-family: "policeH", Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: "policeP";
+  src: url(../Font/Roboto/Roboto-Thin.ttf);
 }
-.footer__logoBlanc {
-  font-family: "policeH3", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  margin: 0;
-  padding: 20px 20px 0 20px;
-  font-weight: normal;
+@font-face {
+  font-family: "policeH3";
+  src: url(../Font/Shrikhand/Shrikhand-Regular.ttf);
 }
-.footer__menu {
-  list-style-type: none;
-  margin: 0px;
-  padding: 20px;
-}
-.footer__menu__lien {
-  font-family: "policeH", Arial, Helvetica, sans-serif;
-}
-.footer__menu__lien a {
-  padding-left: 10px;
-}
-.footer__menu li {
-  padding-bottom: 5px;
-}
-
-.fa-handshake-angle {
-  font-size: 9px;
-  color: white;
-}
-
 .BtnOpacity {
   width: 100%;
   display: flex;
@@ -54,7 +30,6 @@
   background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
   box-shadow: 0px 6px 10px 3px #d3d3d3;
   opacity: 1;
-  transition: opacity 250ms;
   color: white;
   border: 0;
   border-radius: 30px;
@@ -77,7 +52,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
+  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
   box-shadow: 0px 6px 10px 3px #9b9a9a;
   color: white;
   border: 0;
@@ -88,7 +63,6 @@
   margin: 30px 0px 60px 0px;
   list-style-type: none;
   text-decoration: none;
-  color: white;
   font-size: 20px;
   max-width: 300px;
 }
@@ -97,18 +71,6 @@
   opacity: 1;
 }
 
-@font-face {
-  font-family: "policeH";
-  src: url(../Font/Roboto/Roboto-Medium.ttf);
-}
-@font-face {
-  font-family: "policeP";
-  src: url(../Font/Roboto/Roboto-Thin.ttf);
-}
-@font-face {
-  font-family: "policeH3";
-  src: url(../Font/Shrikhand/Shrikhand-Regular.ttf);
-}
 .loading {
   display: flex;
   flex-direction: column;
@@ -200,6 +162,42 @@
     z-index: -1;
   }
 }
+.footer {
+  background-color: rgb(54, 53, 53);
+  color: white;
+}
+.footer a {
+  color: white;
+  font-size: 17px;
+  font-family: "policeH", Arial, Helvetica, sans-serif;
+}
+.footer__logoBlanc {
+  font-family: "policeH3", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  margin: 0;
+  padding: 20px 20px 0 20px;
+  font-weight: normal;
+}
+.footer__menu {
+  list-style-type: none;
+  margin: 0px;
+  padding: 20px;
+}
+.footer__menu__lien {
+  font-family: "policeH", Arial, Helvetica, sans-serif;
+}
+.footer__menu__lien a {
+  padding-left: 10px;
+}
+.footer__menu li {
+  padding-bottom: 5px;
+}
+
+.fa-handshake-angle {
+  font-size: 9px;
+  color: white;
+}
+
 body {
   font-family: "policeP", Arial, Helvetica, sans-serif;
   color: #000000;
@@ -336,7 +334,7 @@ a {
 
 .h2__bord {
   width: 50px;
-  border: 2px solid #98e2cf;
+  border: 2px solid #99E2D0;
   margin-left: 5%;
   margin-bottom: 10px;
 }
@@ -371,7 +369,7 @@ a {
   align-items: center;
   width: 0px;
   height: 85px;
-  background-color: #98e2cf;
+  background-color: #99E2D0;
   border-radius: 0 25px 25px 0;
   transition: width;
   opacity: 0;
