--- a/css/accueil.css
+++ b/css/accueil.css
@@ -1,40 +1,16 @@
 /* base */
-.footer {
-  background-color: rgb(54, 53, 53);
-  color: white;
+@font-face {
+  font-family: "policeH";
+  src: url(../Font/Roboto/Roboto-Medium.ttf);
 }
-.footer a {
-  color: white;
-  font-size: 17px;
-  font-family: "policeH", Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: "policeP";
+  src: url(../Font/Roboto/Roboto-Thin.ttf);
 }
-.footer__logoBlanc {
-  font-family: "policeH3", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  margin: 0;
-  padding: 20px 20px 0 20px;
-  font-weight: normal;
+@font-face {
+  font-family: "policeH3";
+  src: url(../Font/Shrikhand/Shrikhand-Regular.ttf);
 }
-.footer__menu {
-  list-style-type: none;
-  margin: 0px;
-  padding: 20px;
-}
-.footer__menu__lien {
-  font-family: "policeH", Arial, Helvetica, sans-serif;
-}
-.footer__menu__lien a {
-  padding-left: 10px;
-}
-.footer__menu li {
-  padding-bottom: 5px;
-}
-
-.fa-handshake-angle {
-  font-size: 9px;
-  color: white;
-}
-
 .BtnOpacity {
   width: 100%;
   display: flex;
@@ -53,7 +29,6 @@
   background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
   box-shadow: 0px 6px 10px 3px #d3d3d3;
   opacity: 1;
-  transition: opacity 250ms;
   color: white;
   border: 0;
   border-radius: 30px;
@@ -76,7 +51,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
+  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
   box-shadow: 0px 6px 10px 3px #9b9a9a;
   color: white;
   border: 0;
@@ -87,7 +62,6 @@
   margin: 30px 0px 60px 0px;
   list-style-type: none;
   text-decoration: none;
-  color: white;
   font-size: 20px;
   max-width: 300px;
 }
@@ -187,23 +161,51 @@
     z-index: -1;
   }
 }
-@font-face {
-  font-family: "policeH";
-  src: url(../Font/Roboto/Roboto-Medium.ttf);
+.footer {
+  background-color: rgb(54, 53, 53);
+  color: white;
 }
-@font-face {
-  font-family: "policeP";
-  src: url(../Font/Roboto/Roboto-Thin.ttf);
+.footer a {
+  color: white;
+  font-size: 17px;
+  font-family: "policeH", Arial, Helvetica, sans-serif;
 }
-@font-face {
-  font-family: "policeH3";
-  src: url(../Font/Shrikhand/Shrikhand-Regular.ttf);
+.footer__logoBlanc {
+  font-family: "policeH3", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  margin: 0;
+  padding: 20px 20px 0 20px;
+  font-weight: normal;
 }
+.footer__menu {
+  list-style-type: none;
+  margin: 0px;
+  padding: 20px;
+}
+.footer__menu__lien {
+  font-family: "policeH", Arial, Helvetica, sans-serif;
+}
+.footer__menu__lien a {
+  padding-left: 10px;
+}
+.footer__menu li {
+  padding-bottom: 5px;
+}
+
+.fa-handshake-angle {
+  font-size: 9px;
+  color: white;
+}
+
 body {
   font-family: "policeP", Arial, Helvetica, sans-serif;
   color: #000000;
   max-width: 1700px;
   margin: auto;
+}
+
+h1 {
+  font-family: "policeH", Arial, Helvetica, sans-serif;
 }
 
 h3 {
@@ -450,7 +452,7 @@ a {
   margin-right: 15px;
   width: 100px;
   height: 40px;
-  background-color: #98e2cf;
+  background-color: #99E2D0;
   color: #008664;
   border-radius: 5px;
   font-weight: 800;
