correction des mailto dans les footer et ajout d'une media query sur #Menu

--- a/css/menu.css
+++ b/css/menu.css
@@ -259,7 +259,12 @@ a {
   z-index: 1;
   position: relative;
   border-radius: 50px;
-  margin-top: -200px;
+  margin-top: -240px;
+}
+@media screen and (min-width: 390px) {
+  #Menu {
+    margin-top: -180px;
+  }
 }
 
 .NomResto {
