--- a/css/accueil.css
+++ b/css/accueil.css
@@ -21,38 +21,13 @@
 .BtnOpacity a {
   font-family: "policeH", Arial, Helvetica, sans-serif;
 }
-
-.BtnOpacity__btnP {
+.BtnOpacity__btnS {
+  transition: all 250ms;
   display: flex;
   justify-content: center;
   align-items: center;
   background: radial-gradient(ellipse at top left, #ff79da, #9356dc);
   box-shadow: 0px 6px 10px 3px #d3d3d3;
-  opacity: 1;
-  color: white;
-  border: 0;
-  border-radius: 30px;
-  width: 55%;
-  min-width: 242px;
-  height: 60px;
-  margin: 45px 0px 70px 0px;
-  position: absolute;
-  list-style-type: none;
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
-  max-width: 300px;
-}
-
-.BtnOpacity__btnS {
-  opacity: 0;
-  z-index: 1;
-  transition: opacity 250ms;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
-  box-shadow: 0px 6px 10px 3px #9b9a9a;
   color: white;
   border: 0;
   border-radius: 30px;
@@ -65,9 +40,9 @@
   font-size: 20px;
   max-width: 300px;
 }
-
 .BtnOpacity__btnS:hover {
-  opacity: 1;
+  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
+  box-shadow: 0px 6px 10px 3px #9b9a9a;
 }
 
 .loading {
