--- a/sass/_composants/_bouton.scss
+++ b/sass/_composants/_bouton.scss
@@ -1,4 +1,3 @@
-// @import "_utils_variables.scss";
 .BtnOpacity {
   width: 100%;
   display: flex;
@@ -8,69 +7,33 @@
   & a {
     font-family: "policeH", Arial, Helvetica, sans-serif;
   }
+
+  &__btnS {
+    transition: all 250ms;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: radial-gradient(ellipse at top left, $grad2, $grad1);
+    box-shadow: 0px 6px 10px 3px #d3d3d3;
+
+    color: white;
+
+    border: 0;
+    border-radius: 30px;
+    width: 55%;
+    min-width: 242px;
+    height: 60px;
+    margin: 30px 0px 60px 0px;
+    list-style-type: none;
+    text-decoration: none;
+    font-size: 20px;
+    max-width: 300px;
+
+    &:hover {
+      background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
+      box-shadow: 0px 6px 10px 3px #9b9a9a;
+    }
+  }
 }
-
-.BtnOpacity__btnP {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background: radial-gradient(ellipse at top left, $grad2, $grad1);
-  box-shadow: 0px 6px 10px 3px #d3d3d3;
-
-  opacity: 1;
-  // transition: opacity 250ms;
-
-  color: white;
-  border: 0;
-  border-radius: 30px;
-  width: 55%;
-  min-width: 242px;
-  height: 60px;
-  margin: 45px 0px 70px 0px;
-
-  position: absolute;
-
-  list-style-type: none;
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
-  // @media screen and (min-width: 767px) {
-  max-width: 300px;
-  // }
-}
-
-.BtnOpacity__btnS {
-  opacity: 0;
-  z-index: 1;
-
-  transition: opacity 250ms;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background: radial-gradient(ellipse at top left, #f999de, #ad83e1);
-  box-shadow: 0px 6px 10px 3px #9b9a9a;
-  color: white;
-
-  border: 0;
-  border-radius: 30px;
-  width: 55%;
-  min-width: 242px;
-  height: 60px;
-  margin: 30px 0px 60px 0px;
-  list-style-type: none;
-  text-decoration: none;
-  font-size: 20px;
-  // @media screen and (min-width: 767px) {
-  max-width: 300px;
-  // }
-}
-
-.BtnOpacity__btnS:hover {
-  opacity: 1;
-}
-// .BtnOpacity__btnP:hover {
-//   opacity: 0;
-// }
