--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -92,10 +92,6 @@ a {
     opacity: 0;
     transform: translateY(0);
   }
-  // 40%{
-  //   opacity:0.5;
-  //   transform: translateY(-100px);
-  // }
   100% {
     opacity: 1;
     transform: translateY(-200px);
@@ -103,10 +99,10 @@ a {
 }
 
 #plats {
-  animation-delay: 250ms;
+  animation-delay: 2.25s;
 }
 #desserts {
-  animation-delay: 500ms;
+  animation-delay: 2.5s;
 }
 
 #Menu__carte h2 {
@@ -133,6 +129,7 @@ a {
   animation: 1.5s apparition;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
+  animation-delay: 2s;
 
   &__choix {
     display: flex;
