--- a/css/accueil.css
+++ b/css/accueil.css
@@ -55,8 +55,8 @@
   margin: 0;
   padding: 0;
   background: white;
-  opacity: 0;
   position: fixed;
+  opacity: 0;
   z-index: -1;
   -webkit-animation: 3s loader;
           animation: 3s loader;
@@ -374,7 +374,13 @@ a {
     margin-left: 25%;
   }
 }
+.fonctionnement__list__bloc:hover {
+  background-color: #e9e9e9;
+}
 
+.fonctionnement__list__bloc__icones {
+  color: gray;
+}
 .fonctionnement__list__bloc__icones:hover {
   color: #9356dc;
 }
@@ -469,7 +475,7 @@ a {
   -webkit-background-clip: text;
           background-clip: text;
   color: transparent;
-  transition: font-size 100ms;
+  transition: font-size 250ms;
   font-size: 0px;
 }
 .carte__bas__txt {
